--- a/.github/workflows/second-workflow.yml
+++ b/.github/workflows/second-workflow.yml
@@ -29,3 +29,10 @@ jobs:
           run : echo "$Salutation $Prenom. Aujourd'hui, c'est $JOUR_DE_LA_SEMAINE !"  # Commande à exécuter
           env :
             Prenom: Pierre  # Définition d'une variable d'environnement au niveau de l'étape
+  exemple :
+    runs-on : ubuntu-latest
+    steps :
+      - name : définir une variable
+        run : echo "MA_VARIABLE=Bonjour"
+      - name : utiliser la variable
+        run : echo "La valeur de MA_VARIABLE est $MA_VARIABLE."
