--- a/.github/workflows/second-workflow.yml
+++ b/.github/workflows/second-workflow.yml
@@ -33,6 +33,6 @@ jobs:
     runs-on : ubuntu-latest
     steps :
       - name : définir une variable
-        run : echo "MA_VARIABLE=Bonjour"
+        run : echo "MA_VARIABLE=Bonjour" >> $GITHUB_ENV
       - name : utiliser la variable
         run : echo "La valeur de MA_VARIABLE est $MA_VARIABLE."
