--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Mon premier workflow
 on: [push]
 jobs:
   say-hello:
-    runs-on: ubuntu-latest
+    runs-on: alpine-latest
     steps:
       - run: echo "Hello, world"
       - name: Étape pour utiliser un secret
