--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,6 @@
 name: Mon premier workflow
 on: [push]
-defaults:
-  run:
-    working-directory: ./vite-project 
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -11,5 +9,11 @@ jobs:
         uses: actions/setup-node@v4
       - name: fetch repository 
         uses: actions/checkout@v4
+      - name: configure cache
+        uses: actions/cache@v3
+        with:
+          key: ${{runner.os}}-${{hashFiles('./vite/project/package-lock.json')}}
+          path: ./vite-project/.npm
       - name: Install dependencies
-        run: npm install 
+        run: npm ci --cache .npm --prefer-offline
+        working-directory: ./vite-project 
