--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
       - name: configure cache
         uses: actions/cache@v3
         with:
-          key: ${{runner.os}}-${{hashFiles('./vite/project/package.json')}}
+          key: ${{runner.os}}-${{hashFiles('./vite-project/package-lock.json')}}
           path: ./vite-project/.npm
       - name: Install dependencies
         run: npm ci --cache .npm --prefer-offline
